# AliensAndMeteors

./: .gitignore  CMakeLists.txt  HighScores.txt  README.md  quests.json  ui.xml
.github/workflows/: build.yml  cmake-single-platform.yml
Resources/: add.frag  black2white.frag  darken.frag  explosion.frag  light.frag  lightbasic.frag  playerShip.xcf
Resources/Shaders/: Meteor.frag  add.frag  basic2.vert  basicinstanced.vert  basictex.vert  boostBar.frag  boostBar2.frag  brigthness.frag  combineBloom.frag  combineBloomBetter.frag  combineEdges.frag  combineLight.frag  combineLightBloom.frag  combineSmoke.frag  discreteHoriz.frag  discreteVert.frag  downsample.frag  edgeDetectHoriz.frag  edgeDetectVert.frag  fireBolt.frag  fireEffect.frag  fuelBar.frag  fullpass.frag  fullpassLight.frag  gaussHoriz.frag  gaussVert.frag  healthBar.frag  laser.frag  lastPass.frag  lightningBolt.frag  test.frag  text.frag  textBorder.frag  texture.frag
Resources/Textures/Animations/: FrontShield.json  FrontShield2.json  GreenBeam.json  LongShield.json
cmake/: CompilerFlags.cmake  EmscriptenFlags.cmake  External.cmake  ExternalTools.cmake
src/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  Application.cpp  Application.h  BVH.cpp  BVH.h  BehaviourBase.cpp  BehaviourBase.h  Behaviours.cpp  Behaviours.h  Bloom.cpp  Bloom.h  BoidSystem.cpp  BoidSystem.h  BulletSystem.cpp  BulletSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionResolver.cpp  CollisionResolver.h  CollisionSystem.cpp  CollisionSystem.h  Commands.cpp  Commands.h  ComponentSystem.h  Components.h  DrawLayer.cpp  Entities.cpp  Entities.h  Enviroment.cpp  Enviroment.h  ExplosionEffect.cpp  ExplosionEffect.h  Game.cpp  Game.h  GameEvents.h  GameObject.cpp  (+60 more)
src/Entities/: Attacks.cpp  Attacks.h  Bosses.cpp  Bosses.h  Enemy.cpp  Enemy.h  Entities.cpp  Entities.h  Factories.cpp  Factories.h  Meteor.cpp  Meteor.h  Player.cpp  Player.h  Triggers.cpp  Triggers.h  VisualEffects.cpp  VisualEffects.h
src/Menu/: GameState.cpp  GameState.h  Menu.cpp  Menu.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  ScoreBoard.cpp  ScoreBoard.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  StateStack.cpp  StateStack.h  UIDocument.cpp  UIDocument.h
src/Systems/: BoidSystem.cpp  BoidSystem.h  EnemyAISystems.cpp  EnemyAISystems.h  HealthSystem.cpp  HealthSystem.h  MeteorAvoidanceSystem.cpp  MeteorAvoidanceSystem.h  SpriteSystem.cpp  SpriteSystem.h  System.h  TargetSystem.cpp  TargetSystem.h  TimedEvent.cpp  TimedEvent.h  TimedEventManager.cpp  TimedEventManager.h  TimedEventSystem.cpp  TimedEventSystem.h
src/Tests/: main.cpp  test_bvh.cc  test_object_pool.cc  test_polygon_overlap.cc
src/ToolBox/: ComponentData.json
src/Utils/: Colony.h  ContiguousColony.h  GayVector.h  Grid.cpp  Grid.h  ObjectPool.h  RandomTools.h  Statistics.cpp
